k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpops-ingress-jhy
  namespace: tpops-jhy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: tpops.jhy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tpops-service-jhy
                port:
                  number: 8080
  tls:
    - hosts:
        - tpops.jhy.com
      secretName: tpops-tls-jhy
